---
created: "2019-08-23T11:44:40.800280481Z"
creator: insta@0.8.1
source: asdl/src/lib.rs
expression: model
---
Asdl {
    types: [
        SumType(
            SumType {
                id: "stm",
                constructors: [
                    Constructor {
                        id: "Compound",
                        fields: [
                            Field {
                                id: "s1",
                                type_id: "stm",
                                arity: Required,
                            },
                            Field {
                                id: "s2",
                                type_id: "stm",
                                arity: Repeated,
                            },
                        ],
                    },
                    Constructor {
                        id: "Single",
                        fields: [
                            Field {
                                id: "stm",
                                type_id: "stm",
                                arity: Required,
                            },
                        ],
                    },
                ],
                attributes: [
                    Field {
                        id: "prodType",
                        type_id: "prodType",
                        arity: Optional,
                    },
                ],
            },
        ),
        ProdType(
            ProdType {
                id: "prodType",
                fields: [
                    Field {
                        id: "s1",
                        type_id: "stm",
                        arity: Required,
                    },
                ],
            },
        ),
    ],
}
